style.css
input {
    border: 2px solid #E5E7EB;
    border-radius: 5px;
}

input:focus {
    outline: none;
    border: 2px solid #292ccb;
    box-shadow: 3px 3px #b4b2b5;
}


body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-family: Arial, Helvetica, sans-serif;
    background-color: black;
    margin: 0;
}

.main {
    display: flex;
    height: 100vh;
    width: 66vw;
    margin: 0 auto;
    background-color: aliceblue;
}

.left-container {
    display: flex;
    background-image: url("./images/background.jpg");
    background-size: contain;
    width: 400px;
    height: 100vh;
    margin: 0%;
    padding: 0px;
    
}

.right-container {
    display: flex;
    flex-direction: column;
    max-width: 800px;
}

.form-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 30vh;
    width: fit-content;
    background-color: white;
}


form {
    width: fit-content;
}

.user_info {
    display: flex;
    flex-wrap: wrap;
    background-color: white;
    padding: 20px;
    margin-left: 30px;
    justify-content: space-around;
}

.user_info div {
    display: flex;
    flex-direction: column;
    margin: 10px;
}

.intro-container {
    background-color: aliceblue;
    display: flex;
    width: fit-content;
    height: 30vh;
}

.intro-container p {
    
    margin-left: 30px;
}

.logo {
    width: 120px;
    height: 40px;
    background-color: black;
    opacity: 0.3;
}

@font-face {
    font-family: "norse";
    src: 
        url("./norse-bold-webfont.woff") format("woff"),
        url("./norse-bold-webfont.woff2") format("woff2");
        font-weight: normal;
        font-style: normal;
}

.logo p {
    font: 
    1em "norse";
}

button {
    color: white;
    background-color: #596D48;
    border-radius: 5px;
    padding: 5px;
    margin-left: 30px;
    margin-top: 50px;
    width: 150px;
}

.form-container h2 {
    
    margin-left: 30px;
}

.footer {
    display: flex;
    flex-direction: row;
    margin-left: 30px;
    margin-top: 30px;
    height: 30vh;
}

.footer a {
    margin-left: 5px;
    color: #596D48;
}

